# framegroup

./: .gitignore  CMakeLists.txt  Config.cmake.in  FrameCapturer.cpp  FrameCapturer.h  FrameDecoder.cpp  FrameEncoder.cpp  FrameGroup.cpp  FrameItf.h  FrameObject.cpp  FrameObject.h  FrameSinkItf.h  LICENSE  PacketSinkItf.h  README.md  build.sh  build_android.sh  build_framegroup.sh
examples/: Template.h  items.cpp  main.cpp
itf/: FrameGroupApi.cpp  FrameGroupApi.h
itf/swig/: FrameGroupApi.i
src/: FrameCapturer.cpp  FrameCapturer.h  FrameDecoder.cpp  FrameDecoder.h  FrameEncoder.cpp  FrameEncoder.h  FrameGroup.cpp  FrameGroup.h  FrameItf.h  FrameObject.cpp  FrameObject.h  FrameRender.cpp  FrameRender.h  FrameSinkItf.h  FrameTimeController.cpp  FrameTimeController.h  PacketItf.h  PacketSinkItf.h
src/api/: FrameCapturerApi.cpp  FrameCapturerApi.h  FrameGroupApi.cpp  FrameGroupApi.h  FrameRenderApi.cpp  FrameRenderApi.h
